--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -169,7 +169,7 @@
 }
 
 .google-login-button {
-  width: 100%;
+  min-width: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
